--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install pytest-cov
 
 script:
-  - python -m pytest --cov=aw tests/
+  - pytest --cov=aw
 
 after_success:
   - codecov
